<resources>
    <string name="app_name">Từ Điển Anh Việt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Từ điển anh việt</string>
    <string name="title_activity_main_activit_default">MainActivitDefault</string>
    <string name="vietnam">Việt Nam</string>
    <string name="english">English</string>
    <string name="translator">Dịch</string>
    <string name="Error">Error</string>
    <string name="e_v">Anh - Việt</string>
    <string name="v_a">Việt - Anh</string>
    <string name="message_delete_list">Xóa Danh Sách  Từ</string>
    <string name="message_traslator_document">Dịch Văn Bản</string>
    <string name="MailTitle">fdsfd</string>
    <string name="error">Error</string>
    <string name="copy">Copy</string>
    <string name="speech_prompt">Hãy nói từ hoặc cụm từ cần tra...</string>
    <string name="title_activity_favorite">Danh sách từ của bạn</string>
    <string name="title_activity_history">Danh sách lịch sử tra từ</string>
    <string name="title_windown">Cửa xổ tra nhanh</string>
    <string name="title_face">Share Facebook</string>
    <string name="title_rate_app">Đánh giá ứng dụng</string>
    <string name="title_feedback">Gửi phải hồi</string>
    <string name="title_verb">Động từ bất quy tắc</string>

    <string-array name="Mcf">
        <item>SVQ29udmVyVGlvblRyYW5zbGF0b3IwMg==ghnmh,aarMWO5iqA0C638euI2ydLlgXL76he/Guvl7C6sd6fs=</item>
        <item>CaQ29udmVyVGlvblRyYW5zbGF0b3IwNA===Sc==,bcLELJ80RQJ9TowA9M29EXJ+jw70SLXG1WRCA+Y/Bnk=</item>
        <item>7FQ29udmVyVGlvblRyYW5zbGF0b3IwNQ==ukJK2,XhzKzfUuv0m0mcU2XEV5p/keztyhVpbd6kWdPRRu6U0=</item>
        <item>vPQ29udmVyc3Rpb25UcmFuc2xhdG9yS2V5SQ==scSD5,oBHXpTM03Ig3bO00A4CtzfzmJWPjHOStvgXlyJxgWQo=</item>

    </string-array>
    <string name="title_activity_verb">VerbActivity</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="search_content_description"><![CDATA[Content Description<]]></string>
    <string name="dialog_cancel">Huỷ bỏ</string>
    <string name="setup">Xoá</string>
    <string name="message_you_are_sure">Bạn có chắc ?</string>
    <string name="message_delete_all_favorite">Xoá tất cả danh sách yêu thích của bạn.</string>
</resources>
