<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:gravity="center"
            android:paddingLeft="@dimen/size_5"
            android:paddingRight="@dimen/size_5"
            android:text="@string/message_you_are_sure"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center"
            android:paddingLeft="@dimen/size_5"
            android:paddingRight="@dimen/size_5"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                style="@style/dialog_blue_button"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_button_background"
                android:minWidth="100dp"
                android:text="@string/dialog_cancel" />

            <Button
                android:id="@+id/confirm_button"
                style="@style/dialog_blue_button"
                android:minWidth="100dp"
                android:text="@string/setup" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>